# kurs_2

./: .flake8  Makefile  README.md  hw_convert.py  library.py  pyproject.toml  settings.py  test_library.py
.github/workflows/: check-code.yaml
